Use strings for class names, to support classes in default package. Plus, refactor a bit.